Criação do site responsivo

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <main class="container">
         <section class="inscription">
             <img src="./src/images/logo.svg" class="logo" alt="Logo Base Apparel - loja focada em produtos de moda">
+            <img src="./src/images/hero-mobile.jpg" class="img-mobile" aria-hidden="true">
+            <div class="info">
             <h1><span>We're</span><br> coming <br> soon</h1>
             <p>Hello, fellow shopers! We're currently building our new fashion store. Add your email below to stay
                 up-to-date with announcements and our launch deals.</p>
@@ -31,9 +33,10 @@
                 <img src="./src/images/icon-error.svg" alt="icon-error" class="icon-error">
                 <span class="error-message">Please, provide a valid email</span>
             </div>
+        </div>
         </section>
         <section>
-            <img src="./src/images/hero-desktop.jpg" aria-hidden="true">
+            <img src="./src/images/hero-desktop.jpg" class="img-desktop" aria-hidden="true">
         </section>
     </main>
 
